release-data/changelogs/8.2/plugins/branding.adoc
= Changelogs for Rudder plugin branding 8.2.\* versions

== branding-8.2.9-2.2 (2025-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.7-2.2 (2025-06-05)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.5-2.2 (2025-02-27)

=== Changes


=== Bug fixes

==== UI - UX

* Fixed: Some plugins don't use the correct notification system
    (https://issues.rudder.io/issues/26279[#26279])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.4-2.2 (2025-01-13)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Login form for OIDC can disappear depending on branding configuration
    (https://issues.rudder.io/issues/25737[#25737])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.3-2.2 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.2-2.2 (2024-11-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.1-2.2 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.0-2.2 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.0.rc1-2.2 (2024-10-18)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.0.beta1-2.2 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== branding-8.2.0.alpha1-2.2 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

